fixed chat text box not showing on mobile

--- a/src/app/Components/chat/chat.component.scss
+++ b/src/app/Components/chat/chat.component.scss
@@ -122,9 +122,10 @@
     font-size: 110%;
   }
   &-area{
-    overflow: scroll;
-    margin-bottom: 10px;
-    height: 89%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    //margin-bottom: 10px;
+    height: 100%;
     display: flex;
     flex-direction: column;
   }
@@ -132,8 +133,6 @@
     background-color: #1b2021;
     width: 100%;
     height: 8%;
-    bottom: 0;
-    position: absolute;
     display: flex;
     align-items: center;
     justify-content: space-around;
